triplet을 구하는 문제이다. 3개의 정수를 더해서 0이 되는 리스트 구하기. 3개의 포인터를 사용하는 문제로 난이도가 높다.